<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_vertical|top"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minimumY"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/minimumYEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/integralFactor"
                 android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/integralFactorEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/integralOffset"
                 android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/integralOffsetEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/okButton"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:text="@string/OK" />

</LinearLayout>